# skillager

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/skills/simulate-skillager-setup/: SKILL.md  skillager.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
build_backend/: _skillager_build.py
docs/: AGENT_CLI_GUIDE.md  LIBRARY_AUTHORS.md  LINTER_V1_EXTRACTION_AUDIT.md  RELEASE.md  RELEASE_NOTES.md  SAFETY_MODEL.md  SKILL_REPOSITORIES.md  STRUCTURAL_REFACTOR_PLAN.md  USER_GUIDE.md
docs/releases/: v0.7.0.md
examples/: claude-allowlist.json  codex-allowlist.json
examples/fastapi-usage/: SKILL.md  skillager.yaml
examples/pandas-data-cleaning/: SKILL.md  skillager.yaml
scripts/: check.py  check_wheelhouse.py
src/skillager/: __init__.py  audience.py  authored.py  cli.py  collections.py  compatibility.py  discovery.py  families.py  index.py  lint.py  lookback.py  manifest.py  materialize.py  onboard.py  paths.py  project_registry.py  project_tags.py  render.py  review.py  review_gates.py  scan.py  schema.py  search.py  selection.py  session.py  signing.py  simple_yaml.py  statefiles.py  trust.py  update_check.py
src/skillager/catalog/: __init__.py  impl.py
src/skillager/commands/: __init__.py  impl.py
src/skillager/exposure/: __init__.py  impl.py
src/skillager/skills/: audience.py  discovery.py  families.py  index.py  lint.py  manifest.py  render.py  review.py  scan.py  schema.py  search.py  selection.py  simple_yaml.py
src/skillager/state/: authored.py  lookback.py  paths.py  session.py  trust.py  update_check.py
tests/: support.py  test_bootstrap.py  test_collections_tags.py  test_core.py  test_discovery_search_index.py  test_doctor.py  test_linter_equivalence.py  test_linter_shims.py  test_materialize.py  test_project_tags.py  test_read_purity.py  test_recommend.py  test_schema_scan_lint.py  test_setup.py  test_skillager.py  test_status_handoff_session.py  test_working.py
tests/behavior/: support.py  test_cli_contracts.py  test_docs_examples.py
