[project]
name = "skillager"
version = "0.3.1"
description = "A Python environment skill registry and activation layer for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Skillager Contributors" }]
keywords = ["agents", "skills", "codex", "claude", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
]
dependencies = [
    "packaging>=26.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.optional-dependencies]
test = []

[project.scripts]
skillager = "skillager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillager"]
exclude = ["skillager/docs/MANIFEST_HARDENING_PLAN.md"]

[tool.hatch.build.targets.wheel.force-include]
".agents/skills" = "skillager/.agents/skills"
"docs" = "skillager/docs"

[tool.hatch.build.targets.sdist]
include = [
  "src/skillager",
  "tests",
  "docs",
  "examples",
  ".agents/skills",
  "README.md",
  "LICENSE",
  "SECURITY.md",
  "pyproject.toml",
]
exclude = [
  "**/__pycache__",
  "**/*.pyc",
  "**/*.pyo",
  "docs/MANIFEST_HARDENING_PLAN.md",
]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
    "types-pyyaml>=6.0.12.20260408",
]
